==> ChetTaylor-hub/ROBOCON/equestrian2022/SCM/马术初改调试/HARDWARE/CAN/can.c <==
#include "can.h"
#include "usart.h"
#include "delay.h"
#include "bsp_can.h"

u8 CAN1_Mode_Init(u32 tsjw,u32 tbs2,u32 tbs1,u16 brp,u32 mode)
{
    CAN_FilterConfTypeDef  CAN1_FilerConf;
    
    hcan1.Instance=CAN1; 
    hcan1.Init.Prescaler=brp;    //分频系数(Fdiv)为brp+1
    hcan1.Init.Mode=mode;        //模式设置 
    hcan1.Init.SJW=tsjw;         //重新同步跳跃宽度(Tsjw)为tsjw+1个时间单位 CAN_SJW_1TQ~CAN_SJW_4TQ
    hcan1.Init.BS1=tbs1;         //tbs1范围CAN_BS1_1TQ~CAN_BS1_16TQ
    hcan1.Init.BS2=tbs2;         //tbs2范围CAN_BS2_1TQ~CAN_BS2_8TQ
    hcan1.Init.TTCM=DISABLE;     //非时间触发通信模式 
    hcan1.Init.ABOM=DISABLE;     //软件自动离线管理
    hcan1.Init.AWUM=DISABLE;     //睡眠模式通过软件唤醒(清除CAN->MCR的SLEEP位)
    hcan1.Init.NART=ENABLE;      //禁止报文自动传送 
    hcan1.Init.RFLM=DISABLE;     //报文不锁定,新的覆盖旧的 
    hcan1.Init.TXFP=DISABLE;     //优先级由报文标识符决定 
	
    if(HAL_CAN_Init(&hcan1)!=HAL_OK) return 1;   //初始化
    
    CAN1_FilerConf.FilterIdHigh=0X0000;     //32位ID
    CAN1_FilerConf.FilterIdLow=0X0000;
    CAN1_FilerConf.FilterMaskIdHigh=0X0000; //32位MASK
    CAN1_FilerConf.FilterMaskIdLow=0X0000;  
    CAN1_FilerConf.FilterFIFOAssignment=CAN_FILTER_FIFO0;//过滤器0关联到FIFO0
    CAN1_FilerConf.FilterNumber=0;          //过滤器0
    CAN1_FilerConf.FilterMode=CAN_FILTERMODE_IDMASK;
    CAN1_FilerConf.FilterScale=CAN_FILTERSCALE_32BIT;
    CAN1_FilerConf.FilterActivation=ENABLE; //激活滤波器0
    CAN1_FilerConf.BankNumber=14;
	
    if(HAL_CAN_ConfigFilter(&hcan1,&CAN1_FilerConf)!=HAL_OK) return 2;//滤波器初始化
	
    return 0;
}

u8 CAN2_Mode_Init(u32 tsjw,u32 tbs2,u32 tbs1,u16 brp,u32 mode)
{
    CAN_FilterConfTypeDef  CAN2_FilerConf;
    
    hcan2.Instance=CAN2; 
    hcan2.Init.Prescaler=brp;    //分频系数(Fdiv)为brp+1
    hcan2.Init.Mode=mode;        //模式设置 
    hcan2.Init.SJW=tsjw;         //重新同步跳跃宽度(Tsjw)为tsjw+1个时间单位 CAN_SJW_1TQ~CAN_SJW_4TQ
    hcan2.Init.BS1=tbs1;         //tbs1范围CAN_BS1_1TQ~CAN_BS1_16TQ
    hcan2.Init.BS2=tbs2;         //tbs2范围CAN_BS2_1TQ~CAN_BS2_8TQ
    hcan2.Init.TTCM=DISABLE;     //非时间触发通信模式 
    hcan2.Init.ABOM=DISABLE;     //软件自动离线管理
    hcan2.Init.AWUM=DISABLE;     //睡眠模式通过软件唤醒(清除CAN->MCR的SLEEP位)
    hcan2.Init.NART=ENABLE;      //禁止报文自动传送 
    hcan2.Init.RFLM=DISABLE;     //报文不锁定,新的覆盖旧的 
    hcan2.Init.TXFP=DISABLE;     //优先级由报文标识符决定 
	
    if(HAL_CAN_Init(&hcan2)!=HAL_OK) return 1;   //初始化
    
    CAN2_FilerConf.FilterIdHigh=0X0000;     //32位ID
    CAN2_FilerConf.FilterIdLow=0X0000;
    CAN2_FilerConf.FilterMaskIdHigh=0X0000; //32位MASK
    CAN2_FilerConf.FilterMaskIdLow=0X0000;  
    CAN2_FilerConf.FilterFIFOAssignment=CAN_FILTER_FIFO0;//过滤器0关联到FIFO0
    CAN2_FilerConf.FilterNumber=0;          //过滤器0
    CAN2_FilerConf.FilterMode=CAN_FILTERMODE_IDMASK;
    CAN2_FilerConf.FilterScale=CAN_FILTERSCALE_32BIT;
    CAN2_FilerConf.FilterActivation=ENABLE; //激活滤波器0
    CAN2_FilerConf.BankNumber=14;
	
    if(HAL_CAN_ConfigFilter(&hcan2,&CAN2_FilerConf)!=HAL_OK) return 2;//滤波器初始化
	
    return 0;
}

u8 CAN1_Send_Msg(u16 id,u8* msg,u8 len)
{	
    u16 i=0;
    hcan1.pTxMsg->StdId=id;        //标准标识符
    hcan1.pTxMsg->ExtId=0x00;        //扩展标识符(29位)
    hcan1.pTxMsg->IDE=CAN_ID_STD;    //使用标准帧
    hcan1.pTxMsg->RTR=CAN_RTR_DATA;  //数据帧
    hcan1.pTxMsg->DLC=len;                
    for(i=0;i<len;i++)
    hcan1.pTxMsg->Data[i]=msg[i];
    if(HAL_CAN_Transmit(&hcan1,10)!=HAL_OK) return 1;     //发送
    return 0;		
}

u8 CAN2_Send_Msg(u16 id,u8* msg,u8 len)
{	
    u16 i=0;
    hcan2.pTxMsg->StdId=id;        //标准标识符
    hcan2.pTxMsg->ExtId=0x00;        //扩展标识符(29位)
    hcan2.pTxMsg->IDE=CAN_ID_STD;    //使用标准帧
    hcan2.pTxMsg->RTR=CAN_RTR_DATA;  //数据帧
    hcan2.pTxMsg->DLC=len;                
    for(i=0;i<len;i++)
    hcan2.pTxMsg->Data[i]=msg[i];
    if(HAL_CAN_Transmit(&hcan2,10)!=HAL_OK) return 1;     //发送
    return 0;		
}
